# tara

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  landing.js  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  gh-pages.yml  tests.yml
app/: agent.py  calculator.py  logger.py  main.py  prompts.py  taco.py
prisma/: schema.prisma
prisma/migrations/20260128201215_init/: migration.sql
prisma/migrations/20260128222439_google_auth/: migration.sql
prisma/migrations/20260129121000_add_training_preferences_fields/: migration.sql
static/: app.js  index.html  style.css
tara/api/app/: agent.py  auth.py  deps.py  google_auth.py  jobs.py  logger.py  main.py  profile.py  prompts.py  schemas.py  security.py  settings.py
tara/api/tests/: conftest.py
tara/api/tests/app/: test_agent.py  test_api.py  test_calculator.py  test_e2e_api.py  test_prompts.py
tara/mobile/: README.md  pubspec.yaml
tara/mobile/android/: key.properties.example
tara/mobile/android/app/: build.gradle.kts
tara/mobile/lib/: main.dart  tara_app.dart
tara/mobile/lib/models/: profile.dart
tara/mobile/lib/screens/: menu_input_screen.dart  profile_screen.dart  profile_summary_screen.dart  profile_welcome_screen.dart  results_screen.dart  splash_screen.dart  training_profile_screen.dart
tara/mobile/lib/services/: api_client.dart  api_client_provider.dart  auth_storage.dart  profile_storage.dart
tara/mobile/lib/state/: analysis_state.dart  auth_state.dart  menu_state.dart  profile_state.dart  profile_summary_state.dart  theme_state.dart
tara/mobile/lib/theme/: brand_theme.dart  brand_tokens.dart
tara/mobile/test/: widget_test.dart
tara/web/: app.js  index.html  landing.css  style.css
tests/: conftest.py
tests/app/: test_agent.py  test_api.py  test_calculator.py  test_e2e_api.py  test_prompts.py
tests/support/g4f/: __init__.py  client.py  errors.py
(+14 files in other folders)
