[project]
name = "tara"
version = "0.1.0"
description = "Agente que calcula porções ideais de alimentos baseado no seu perfil de saúde"
authors = [{name = "Yasmim"}, {name = "Camille"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "g4f>=0.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
]

[tool.uv]
dev-dependencies = []
